# dynamic-config-nacos

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  README.zh-CN.md  how-to-use.md  how-to-use.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml  publish.yml.example
scripts/: build_dist.sh  check_dist.sh  upload_pypi.sh  upload_testpypi.sh
src/dynamic_config/: __init__.py  backends.py  models.py  provider.py  view.py
tests/: test_backends.py  test_provider.py  test_view.py
